Fixed Int to Integer conversion.

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 
 	testCompile 'junit:junit:4.11'
 	testCompile 'com.github.rhea-flow:test-data:-SNAPSHOT'
+	testCompile 'com.github.rhea-flow:graph-viz:-SNAPSHOT'
 }
 
 sourceSets {
